# simple-video-utils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
simple_video_utils/: __init__.py  frames.py  metadata.py  slicing.py
tests/: test_frames.py  test_metadata.py  test_regression.py  test_rotation.py  test_slicing.py
tests/assets/: buggy_mov_header.mov  example.webm  no_nb_frames.mkv  no_nb_frames.webm
